--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Hi! I am Jadyn, and I welcome you to explore what skills I have to offer in the field of web development."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
     <!--
